RESOLVED FIXED275351
ASSERTION FAILED: owner->get() == &Thread::current() in JSC::BlockDirectory::assertIsMutatorOrMutatorIsStopped for inspector/memory/tracking.html
https://bugs.webkit.org/show_bug.cgi?id=275351
Summary ASSERTION FAILED: owner->get() == &Thread::current() in JSC::BlockDirectory::...
Fujii Hironori
Reported 2024-06-11 04:32:31 PDT
History: https://results.webkit.org/?suite=layout-tests&test=inspector%2Fmemory%2Ftracking.html&style=debug Buildbot: builder Apple-Ventura-Debug-AppleSilicon-WK1-Tests build 6523 : 279867@main https://build.webkit.org/#/builders/705/builds/6523 https://build.webkit.org/results/Apple-Ventura-Debug-AppleSilicon-WK1-Tests/279867@main%20(6523)/inspector/memory/tracking-crash-log.txt ASSERTION FAILED: owner->get() == &Thread::current() ./heap/BlockDirectory.cpp(502) : void JSC::BlockDirectory::assertIsMutatorOrMutatorIsStopped() const 1 0x119cc2084 JSC::BlockDirectory::assertIsMutatorOrMutatorIsStopped() const 2 0x119db96d8 void JSC::BlockDirectory::forEachBlock<JSC::MarkedSpace::size()::$_23>(JSC::MarkedSpace::size()::$_23 const&) 3 0x119db96a8 void JSC::MarkedSpace::forEachBlock<JSC::MarkedSpace::size()::$_23>(JSC::MarkedSpace::size()::$_23 const&)::'lambda'(JSC::BlockDirectory&)::operator()(JSC::BlockDirectory&) const 4 0x119db9650 void JSC::MarkedSpace::forEachDirectory<void JSC::MarkedSpace::forEachBlock<JSC::MarkedSpace::size()::$_23>(JSC::MarkedSpace::size()::$_23 const&)::'lambda'(JSC::BlockDirectory&)>(JSC::MarkedSpace::size()::$_23 const&) 5 0x119da7930 void JSC::MarkedSpace::forEachBlock<JSC::MarkedSpace::size()::$_23>(JSC::MarkedSpace::size()::$_23 const&) 6 0x119da7870 JSC::MarkedSpace::size() 7 0x119ce9fe8 JSC::Heap::extraMemorySize() 8 0x123c02438 WebCore::ResourceUsageThread::platformCollectMemoryData(JSC::VM*, WebCore::ResourceUsageData&) 9 0x12746e548 WebCore::ResourceUsageThread::threadBody() 10 0x12747b974 std::__1::unique_ptr<WTF::Detail::CallableWrapper<WebCore::ResourceUsageThread::createThreadIfNeeded()::$_9, void>, std::__1::default_delete<WTF::Detail::CallableWrapper<WebCore::ResourceUsageThread::createThreadIfNeeded()::$_9, void>>>::unique_ptr[abi:v15006]<true, void>(WTF::Detail::CallableWrapper<WebCore::ResourceUsageThread::createThreadIfNeeded()::$_9, void>*) 11 0x12747b920 WTF::Detail::CallableWrapper<WebCore::ResourceUsageThread::createThreadIfNeeded()::$_9, void>::call() 12 0x1186f00e4 WTF::Function<void ()>::operator()() const 13 0x1187e68fc WTF::Thread::entryPoint(WTF::Thread::NewThreadContext*) 14 0x1187f3048 WTF::wtfThreadEntryPoint(void*) 15 0x18bd43fa8 _pthread_start 16 0x18bd3eda0 thread_start
Attachments
Keith Miller
Comment 2 2024-06-11 05:39:52 PDT
*** Bug 275356 has been marked as a duplicate of this bug. ***
Radar WebKit Bug Importer
Comment 3 2024-06-11 05:40:22 PDT
Keith Miller
Comment 4 2024-06-11 05:50:04 PDT
EWS
Comment 5 2024-06-11 13:01:19 PDT
Committed 279920@main (89d69b59b62a): <https://commits.webkit.org/279920@main> Reviewed commits have been landed. Closing PR #29711 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.