Cherry-pick 279920@main (89d69b59b62a). https://bugs.webkit.org/show_bug.cgi?id=275351

ASSERTION FAILED: owner->get() == &Thread::current() in JSC::BlockDirectory::assertIsMutatorOrMutatorIsStopped for inspector/memory/tracking.html
    https://bugs.webkit.org/show_bug.cgi?id=275351
    rdar://problem/129580672

    Reviewed by Yusuke Suzuki.

    The assert in of `m_objectSpace.capacity() >= m_objectSpace.size()` in `Heap::extraMemorySize()` is
    invalid as calling `m_objectSpace.size()` requires being the mutator currently, which
    `WebCore::ResourceUsageThread` is not.

    * Source/JavaScriptCore/heap/Heap.cpp:
    (JSC::Heap::extraMemorySize):

    Canonical link: https://commits.webkit.org/279920@main

Canonical link: https://commits.webkit.org/274313.364@webkitglib/2.44